fix: alignment

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -20,6 +20,7 @@
   margin: 50px 30px;
   width: 100vw;
   height: 100%;
+  align-self: center;
 }
 
 .home__card {
